# cody-cli

./: .gitignore  pyproject.toml
bash_functions/: insert.sh
cody_cli/: cli.py
