[tool.poetry]
name = "cody-cli"
version = "0.1.1"
description = ""
authors = ["xangcastle <xangcastle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
requests = "^2.31.0"
openai = "^1.7.2"

[tool.poetry.scripts]
cody = "cody_cli.cli:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
